svelte/src/styles/global.css
@import 'tailwindcss';

@font-face {
	font-family: 'UniversLT';
	src: url('/UniversLT-55Rm.woff2') format('woff2');
	font-weight: 400;
	font-style: normal;
}

@font-face {
	font-family: 'Times';
	src: url('/Times-Roman.woff2') format('woff2');
	font-weight: 400;
	font-style: normal;
}

@font-face {
	font-family: 'Times';
	src: url('/Times-Italic.woff2') format('woff2');
	font-weight: 400;
	font-style: italic;
}

@font-face {
	font-family: 'Times';
	src: url('/Times-Bold.woff2') format('woff2');
	font-weight: 600;
	font-style: normal;
}

@font-face {
	font-family: 'Times';
	src: url('/Times-BoldItalic.woff2') format('woff2');
	font-weight: 600;
	font-style: italic;
}

@theme {
	--text-xs: 1.333rem;     /* 15pt */
	--text-xs--line-height: 1.103;
	--text-sm: 1.422rem;     /* 16pt */
	--text-sm--line-height: 1.125;
	--text-base: 1.689rem;   /* 19pt */
	--text-base--line-height: 1.105;
	--text-md: 1.778rem;     /* 20pt */
	--text-md--line-height: 1.1;
	--text-lg: 2rem;         /* 22.5pt */
	--text-lg--line-height: 1.06;

	--tracking: .02em;

	--color-black: #000000;
	--color-white: #ffffff;
  --color-tan: #fdf5e7;
  --color-grey-1: #b2b3b2;

	--spacing-xs: 0.5rem;
  --spacing-sm: 1rem;
	--spacing-base: 2rem;
  --spacing-md: 3rem;
  --spacing-lg: 4rem;
  --spacing-xl: 5rem;
  --spacing-2xl: 10rem;

	--font-primary: 'Times', sans-serif;
	--font-secondary: 'UniversLT', sans-serif;
}

:root {
	--underline-thickness: .05em;
	--underline-thickness-alt: .09em;
	--underline-offset: .03em;
}

html {
	font-size: 10px;
	font-family: var(--font-primary);
}

body {
	font-size: var(--text-md);
	line-height: var(--text-lg--leading);
	letter-spacing: var(--tracking);
	overflow-y: hidden;

	@media (min-width: 1024px) {
		font-size: var(--text-lg);
	}

  #nprogress .bar {
    height: 2px;
    background-color: var(--color-black);

    @media (min-width: 1024px) {
      height: 2px;
    }
  }
}

button {
	cursor: pointer;
}

input {
	outline: none;
	border: none;
	box-shadow: none;
}

/*
Lazy Load
*/

img[loading='lazy'] {
	opacity: 0;
	transition: opacity 0.2s;

	&.loaded {
		opacity: 1;
	}
}

